--- a/fruit/src/styles/city.scss
+++ b/fruit/src/styles/city.scss
@@ -1,5 +1,6 @@
 #city{
 	background:#f4f4f4;
+  
 	p{
 		font-size:15px;
         padding:20px;
@@ -22,4 +23,5 @@
    	 }  
    	}
    }
+   #ct{background:red;}
 }
