--- a/fruit/src/styles/header.scss
+++ b/fruit/src/styles/header.scss
@@ -3,7 +3,7 @@
     height:40px;
     top: 0px;
     width: 100%;
-    background: green;
+    background: #20c47f;
 
      li{list-style:none}
      .one{  
