--- a/fruit/src/styles/sort.scss
+++ b/fruit/src/styles/sort.scss
@@ -19,6 +19,14 @@
     }
     .main{  margin-top:51px;
             display: flex;
+            .dark1{
+                width: 100%;
+                height: 100%;
+                background: black;
+                position: fixed;
+                opacity: .3;
+                top: 50px;
+            }
             .leftlist{
                 width: 25%;
                 background: #eee;
