--- a/fruit/src/views/sxm_css/nav.scss
+++ b/fruit/src/views/sxm_css/nav.scss
@@ -1,13 +1,16 @@
-#nav{
+#nav1{
+	 overflow:hidden;
+   margin-bottom:15px;
     .firstimg{width:100%}
-    .secondimg{width:100%}
+    .secondimg{width:100%;}
     .one{
-    	position:absolute;
-    	left:25px;
-    	top:340px;
+      position:absolute;
+      left:7%;
+      top:350px;
+     
 
        .one_li{
-       	        width:80px;
+       	        width:25%;
 	    		float:left;
 	    		color:white;
 	    		font-size:12px;
@@ -17,4 +20,40 @@
 	    	}
        }
     }
+    .news{
+      background:white;
+      width:100%;
+      height:35px;
+      font-weight:bold;
+      padding-left:10px;
+      padding-top:5px;
+      position:relative;
+      overflow:hidden;
+      p{display:inline;span{color:green}}
+      .news_tp{
+        li{
+          height:35px;
+          line-height:32px;
+          color:black;
+        }
+         overflow:hidden;
+        position:absolute;
+        left:80px;
+        top:0;
+        background:white;
+        animation:move 6s ease-out infinite;
+      }
+    }
+
+
+
+
 }
+        @keyframes move{
+          0%{transform:translate(0,0)}
+          30%{transform:translate(0,-35px)}
+          50%{transform:translate(0,-35px)}
+          75%{transform:translate(0,0)}
+          100%{transform:translate(0,0)}
+   
+        }
