--- a/fruit/src/styles/datalist.scss
+++ b/fruit/src/styles/datalist.scss
@@ -1,5 +1,6 @@
 #showshop{
     padding-bottom: 50px;
+    touch-action: pan-y; 
     .productInfor{
         width: 100%;
         padding-left: 6px;
@@ -35,7 +36,19 @@
             height:60px;
             line-height: 60px;
             border-bottom: 1px solid #ccc;
+            p{
+                float: left;
+            }
+            span{
+                margin-left: 10px;
+                float: left;
+                height:50px;
+                width: 50px;
+                line-height: 50px;
+                font-size: 30px;
+            }
         }
+
     }
     .address{
         padding-left: 10px;
@@ -74,8 +87,23 @@
                 float:left;
                 width: 80px;
                 text-align: center;
+                position: relative;
                 i{
                     height: 20px;
+                }
+            }
+            .showNum{
+                div{
+                    position: absolute;
+                    height: 20px;
+                    width: 20px;
+                    border-radius:20px; 
+                    top:0px;
+                    left:40px;
+                    line-height: 20px;
+                    text-align: center;
+                    background:red;
+                    color:white;
                 }
             }
         }
@@ -86,5 +114,6 @@
             text-align: center;
             background: red;
         }
+        
     }
 }
