--- a/fruit/src/styles/shopping.scss
+++ b/fruit/src/styles/shopping.scss
@@ -56,15 +56,16 @@
             background: red;
             width: 100px;
             text-align: center;
-            font-size: 25px;
+            font-size: 20px;
         }
     }
     #daxiao{
-        height:800px;
-        background: skyblue;
+        height:200px;
+        background: orange;
         h2{
             text-align: center;
-            background: skyblue;
+            background: orange;
+            line-height: 100px;
         }
     }
 }
